--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,6 +17,6 @@
         {% include nav-items.html paths = page_paths %}
       </nav>
     {%- endunless %}
-    <li><a href="{{ '/about/' | relative_url }}" style="float: right; font-size: 1.5em;">About</a></li>
+    <li><a href="{{ 'about/' | relative_url }}" style="float: right; font-size: 1.5em;">About</a></li>
   </div>
 </header>
