--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="wrapper">
-    <img src="uploads/logo.png" style="width: 18%; margin: 3px 15px 3px 3px; float: left;"/>
+    <img src="{{ 'uploads/logo.png' | relative_url }}" style="width: 18%; margin: 3px 15px 3px 3px; float: left;"/>
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.minima.nav_pages | default: default_paths -%}
     {%- assign page_titles = site.pages | map: 'title' | compact %}
@@ -17,6 +17,6 @@
         {% include nav-items.html paths = page_paths %}
       </nav>
     {%- endunless %}
-    <li><a href="{{ 'about/' | relative_url }}" style="float: right; font-size: 1.5em;">About</a></li>
+    <li><a href="{{ '/about/' | relative_url }}" style="float: right; font-size: 1.5em;">About</a></li>
   </div>
 </header>
